# mongodb-to-device-to-s3

./: .env  .env.example  .gitignore  README.md  README_PYPI.md  backup_mongodb.py  main.py  pyproject.toml  requirements.txt
src/mongodb_backup_s3/: __init__.py  cli.py  upload_to_s3.py
