[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongodb-backup-s3"
version = "0.1.0"
description = "Dump complete MongoDB data to device or upload to AWS S3"
readme = "README_PYPI.md"
license = {text = "MIT"}
authors = [
    {name = "Farrukh Shahid", email = "your-email@example.com"}
]
keywords = ["mongodb", "backup", "s3", "aws", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pymongo>=4.0.0",
    "boto3>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/FarrukhShahid/mongodb-to-device-to-s3"
Repository = "https://github.com/FarrukhShahid/mongodb-to-device-to-s3"
Issues = "https://github.com/FarrukhShahid/mongodb-to-device-to-s3/issues"

[project.scripts]
mongodb-backup-s3 = "mongodb_backup_s3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]